deployment.yml
apiVersion: app/v1
kind: Deployment
  name: pywebapp-deployment
  labels:
    app: pywebapp
spec:
  templete:
    metadata:
      name: pywebapp-pod
      labels:
         app: pywebapp
      spec:
        containers:
        - name: python-app-container
          image: samrika26/python_app10:latest
          ports:
          - containerPort: 80
