service.yml
apiVersion: v1
kind: Service
metadata:
  name: pywebapp-service
spec:
  type: NodePort
  ports:
  - targetPort: 5001
    port: 5001
    nodePort: 30006
  selector:
    app: pywebapp
